Changes with Apache 1.3b6

  *) Fixed the DBM RewriteMap support for mod_rewrite: First the support now
     is automatically disabled under configure time when the dbm_xxx functions
     are not available. Second, two heavy source code errors in the DBM
     support code were fixed.  This makes DBM RewriteMap's useable again after
     a long time of brokeness. [Ralf S. Engelschall]

  *) Now all configuration files support Unix-style line-continuation via 
     the trailing backslash ("\") character. This enables us to write down
     complex or just very long directives in a more readable way.  The
     backslash character has to be really the last character before the
     newline and it has not been prefixed by another (escaping) backslash.
     [Ralf S. Engelschall]

  *) When using ProxyPass the ?querystring was not passed correctly.
     [Joel Truher <truher@wired.com>]

  *) To deal with modules being compiled and [dynamically] linked
     at a different time from the core, the SERVER_VERSION and
     SERVER_BUILT symbols have been abstracted through the new
     API routines apapi_get_server_version() and apapi_get_server_built().
     [Ken Coar]

  *) WIN32: Preserve trailing slash in canonical path (and hence
	   in PATH_INFO). [Paul Sutton, Ben Laurie]

  *) USE_PTHREAD_SERIALIZED_ACCEPT has proven unreliable depending on
     the rev of Solaris and what mixture of modules are in use.  So
     it has been disabled, and Solaris is back to using
     USE_FCNTL_SERIALIZED_ACCEPT.  Users may experiment with
     USE_PTHREAD_SERIALIZED_ACCEPT at their own risk, it may speed
     up static content only servers.  Or it may fail unpredictably.
     [Dean Gaudet] PR#1779, 1854, 1904

  *) mod_test_util_uri.c created which tests the logic in util_uri.c.
     [Dean Gaudet]

  *) Rewrite of absoluteURI handling, and in particular how absoluteURIs
     match vhosts.  Unless a request is a proxy request, a "http://host"